manifests/alertmanager/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager
  namespace: prometheus
  labels:
    app: alertmanager
spec:
  replicas: 2
  selector:
    matchLabels:
      app: alertmanager
  template:
    metadata:
      labels:
        app: alertmanager
    spec:
      containers:
        - name: alertmanager
          image: prom/alertmanager
          imagePullPolicy: IfNotPresent
          args:
            - --config.file=/etc/alertmanager/alertmanager.yml
            - --storage.path=/alertmanager
            - --cluster.listen-address=0.0.0.0:9094
            - --cluster.advertise-address=$(POD_IP):9094
            - --cluster.peer=alertmanager-headless.prometheus.svc:9094
          ports:
            - containerPort: 9093
            - containerPort: 9094
          volumeMounts:
            - name: config-volume
              mountPath: /etc/alertmanager
              readOnly: true
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 4m
              memory: 100Mi
      volumes:
        - name: config-volume
          configMap:
            name: alertmanager-config
