manifests/alertmanager/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-headless
  namespace: prometheus
spec:
  clusterIP: None  # HEADLESS SERVICE
  selector:
    app: alertmanager
  ports:
    - name: cluster
      port: 9094
      targetPort: 9094

---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: prometheus
spec:
  selector:
    app: alertmanager
  ports:
    - name: web
      port: 9093
      targetPort: 9093
  type: ClusterIP
